<resources>
    <string name="app_name">Paseico</string>
    <string name="app_name_UpperCase">PASEICO</string>

    <string name="title_activity_routing">Map</string>
    <string name="title_activity_route_navigator">Map</string>
    <string name="title_activity_maps">Map</string>

    <string name="title_activity_main_map">Map</string>
    <string name="title_activity_route_search">RouteSearch</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
        AIzaSyAMLXmyf_ai85V6PdlA7jYhjL-nSgHl7mA
    </string>

    <!-- Strings used for buttons names-->
    <string name="search">Buscar</string>
    <string name="previous">Volver</string>
    <string name="start_route">Empezar ruta</string>
    <string name="finalize">Finalizar</string>
    <string name="create_new_point_of_interest_button">Crear nuevo Punto de Interés</string>

    <string name="seeSelectedPOIs_switch">Ver lista POIs</string>
    <string name="orderedRoute_switch">Ruta ordenada</string>
    <string name="poiUp_button">Subir</string>
    <string name="poiDown_button">Bajar</string>

    <string name="discounts">Descuentos</string>

    <string name="zero">0</string>

    <!-- Strings used for textviews names-->
    <string name="key_word">Palabras clave:</string>
    <string name="category">Temática:</string>
    <string name="category_without_colon">Temática</string>
    <string name="length">Longitud:</string>
    <string name="estimated_time">Duración estimada:</string>
    <string name="number_of_POI">Número de puntos de interés:</string>
    <string name="minimum_of_reward_points">Mínimo de puntos:</string>
    <string name="km">km</string>
    <string name="hours">h</string>
    <string name="reward_points">Puntos:</string>
    <string name="ordered_route">Ruta ordenada:</string>
    <string name="list_of_POI">Puntos de interés:</string>

    <string name="default_spinner_choice">Indiferente</string>
    <string name="no_theme_choice">Sin temática</string>
    <string name="yes">Sí</string>
    <string name="no">No</string>

    <string name="museums">Museos</string>
    <string name="restaurants">Restaurantes</string>
    <string name="monuments">Monumentos</string>
    <string name="nature">Naturaleza</string>
    <string name="pubs">Bares</string>

    <string name="lt0.5">&lt; 0,5</string>
    <string name="between0.5_1">0.5-1</string>
    <string name="lt1">&lt; 1</string> <!-- &lt; is '<' -->
    <string name="between1_2">1-2</string>
    <string name="between2_3">2-3</string>
    <string name="between3_4">3-4</string>
    <string name="between4_5">4-5</string>
    <string name="gt5">&gt; 5</string> <!-- &gt; is '>' -->

    <!-- Strings arrays used to populate searchFragment spinners -->
    <string name="search_fragment_title">Seleccione el filtro de búsqueda...</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_main_menu">MainMenuActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>

    <string name="nav_header_subtitle">android.studio@android.com</string>

    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_profile">Perfil</string>
    <string name="profile_userRoutesList">Rutas del usuario</string>
    <string name="menu_userSearch">Buscar usuarios</string>
    <string name="menu_user_created_routes">Rutas</string>
    <string name="menu_marketplace">Tienda</string>

    <!--Resources used in the menu's labels. -->
    <string name="marketplace_discounts">Descuentos</string>
    <string name="menu_route_search_fragment_label">Buscar rutas</string>

    <string name="route_search_result_fragment_label">Resultado busqueda</string>

    <string name="route_creation_finalize_title">"Finalizar creación de ruta"</string>
    <string name="route_modification_finalize_title">"Finalizar modificación de ruta"</string>

    <string name="route_creation_confirmation_message">"La nueva ruta ha sido guardada satisfactoriamente."</string>
    <string name="route_creation_not_enough_points_message">"No tienes los puntos suficientes para crear la ruta."
    </string>

    <string name="route_creation_summary_message">"El coste de la ruta en creación es de: %1$d puntos. \n
        Tras crear esta ruta tendrás %2$d puntos en tu cuenta."</string>
    <string name="route_name_hint">Nombre de la ruta</string>

    <!-- Messages displayed to the user. -->
    <string name="rutero">Rutero</string>
    <string name="organizaci_n">Organización</string>
    <string name="nombre_de_la_organizaci_n">Nombre organización</string>

    <!-- The %1$d represents a String format argument.
    (See: https://stackoverflow.com/questions/3656371/is-it-possible-dynamically-to-add-string-to-string-xml-in-android -->
    <string name="contrase_a">Contraseña</string>

    <!-- TextInput related. -->
    <string name="repita_la_contrase_a">Repita la contraseña</string>

    <string name="crear_ruta_organizacion">Crear Ruta Organización</string>
    <string name="finalize_route_creation_toolbar_title">Finalizar creación de ruta</string>

    <string name="new_point_of_interest_name_text_input_hint">Nombre del nuevo Punto de Interés</string>
    <string name="router">Rutero</string>
    <string name="organization">Organización</string>
    <string name="organizationName">Nombre de la organización</string>
    <string name="password">Contraseña</string>
    <string name="passwordRepeat">Repita la contraseña</string>
    <string name="nif">NIF</string>
    <string name="email">Correo electrónico</string>
    <string name="register">Registrarse</string>
    <string name="create_new_coupon">Crear nuevo cupón</string>
    <string name="delete_coupon">Borrar cupón</string>
    <string name="your_coupon">Tus cupones</string>
    <string name="discount_name">Nombre del descuento</string>
    <string name="percentage_to_apply">Porcentaje a aplicar</string>
    <string name="name">Nombre</string>
    <string name="percentage">Porcentaje</string>
    <string name="create_coupon">Crear</string>
    <string name="cancel_coupon">Cancelar</string>
    <string name="title_new_coupon">Crear nuevo cupón</string>
    <string name="log_out_organization">Cerrar sesión</string>

    <string name="route_creation_empty_name">Por favor, introduce un nombre válido</string>
    <string name="title_activity_selected_poi">Map</string>
    <string name="puntos_map_TextView">PUNTOS</string>
    <string-array name="route_category">
        <item>@string/default_spinner_choice</item>
        <item>@string/no_theme_choice</item>
        <item>@string/museums</item>
        <item>@string/restaurants</item>
        <item>@string/monuments</item>
        <item>@string/nature</item>
        <item>@string/pubs</item>
    </string-array>
    <string-array name="lengths_of_route">
        <item>@string/default_spinner_choice</item>
        <item>@string/lt1</item>
        <item>@string/between1_2</item>
        <item>@string/between2_3</item>
        <item>@string/between3_4</item>
        <item>@string/between4_5</item>
        <item>@string/gt5</item>
    </string-array>
    <string-array name="estimated_times_of_route">
        <item>@string/default_spinner_choice</item>
        <item>@string/lt0.5</item>
        <item>@string/between0.5_1</item>
        <item>@string/between1_2</item>
        <item>@string/between2_3</item>
        <item>@string/between3_4</item>
        <item>@string/between4_5</item>
        <item>@string/gt5</item>
    </string-array>
    <string-array name="ordered_route_choices">
        <item>@string/default_spinner_choice</item>
        <item>@string/yes</item>
        <item>@string/no</item>
    </string-array>
    <string-array name="route_creation_route_category">
        <item>@string/no_theme_choice</item>
        <item>@string/museums</item>
        <item>@string/restaurants</item>
        <item>@string/monuments</item>
        <item>@string/nature</item>
        <item>@string/pubs</item>
    </string-array>

    <string name="title_activity_main_menu">MainMenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--Resources used in the menu's labels. -->
    <string name="menu_profile">Perfil</string>
    <string name="profile_userRoutesList">Rutas del usuario</string>

    <string name="menu_userSearch">Buscar usuarios</string>

    <string name="menu_user_created_routes">Rutas</string>

    <string name="menu_marketplace">Tienda</string>
    <string name="marketplace_discounts">Descuentos</string>

    <string name="menu_route_search_fragment_label">Buscar rutas</string>
    <string name="route_search_result_fragment_label">Resultado busqueda</string>

    <!-- Messages displayed to the user. -->
    <string name="route_creation_finalize_title">"Finalizar creación de ruta"</string>
    <string name="route_creation_confirmation_message">"La nueva ruta ha sido guardada satisfactoriamente."</string>
    <string name="route_creation_not_enough_points_message">"No tienes los puntos suficientes para crear la ruta."
    </string>

    <!-- The %1$d represents a String format argument.
    (See: https://stackoverflow.com/questions/3656371/is-it-possible-dynamically-to-add-string-to-string-xml-in-android -->
    <string name="route_creation_summary_message">"El coste de la ruta en creación es de: %1$d puntos"</string>

    <!-- TextInput related. -->
    <string name="new_point_of_interest_name_text_input_hint">Nombre del nuevo Punto de Interés</string>
    <string name="finalize_route_creation_toolbar_title">Finalizar creación de ruta</string>
    <string name="route_name_hint">Nombre de la ruta</string>

    <string name="rutero">Rutero</string>
    <string name="organizaci_n">Organización</string>
    <string name="nombre_de_la_organizaci_n">Nombre organización</string>
    <string name="contrase_a">Contraseña</string>
    <string name="repita_la_contrase_a">Repita la contraseña</string>
</resources>
