<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".mainMenu.searcher.RouteSearchFragment"
        style="@style/Theme.MaterialComponents.Light.NoActionBar"
        android:background="@color/background">

    <Button
        android:id="@+id/btn_search"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_marginBottom="60dp"
        android:text="@string/search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:backgroundTint="@color/colorPrimary"
        style="@style/LargeButtonText"
        android:textColor="@color/white"/>

    <TextView
        android:text="Búsqueda"
        style="@style/LargeTextView"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
            android:id="@+id/textView_routeSearchTitle"
            android:layout_width="match_parent"
            android:layout_height="31dp"
            android:layout_marginTop="30dp"
            android:text="@string/search_fragment_title"
            android:paddingStart="22dp"
            app:layout_constraintBottom_toTopOf="@id/btn_search"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.43"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.093"/><![CDATA[

    "
        app:layout_constraintVertical_bias="1.0" />



    ]]>

    <EditText
        android:id="@+id/editText_keyWord"
        android:layout_width="207dp"
        android:layout_height="46dp"
        android:layout_marginStart="170dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/route_name_hint"
        android:inputType="textPersonName"
        android:selectAllOnFocus="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_routeSearchTitle" />

    <Spinner
        android:id="@+id/spinner_route_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="48dp"
        android:entries="@array/route_category"
        android:spinnerMode="dropdown"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_keyWord" />

    <TextView
            android:id="@+id/textView_keyWord"
            style="@style/SmallTextView"
            android:layout_marginTop="50dp"
            android:paddingStart="40dp"
            android:text="@string/key_word"
            app:layout_constraintEnd_toStartOf="@+id/editText_keyWord"
            app:layout_constraintHorizontal_bias="0.658"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_routeSearchTitle"/>

    <TextView
            android:id="@+id/textView_theme"
            style="@style/SmallTextView"
            android:paddingStart="40dp"
            android:layout_marginTop="50dp"
            android:text="@string/category"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_keyWord"/>

    <TextView
            android:id="@+id/textView_length"
            style="@style/SmallTextView"
            android:text="@string/length"
            android:paddingStart="40dp"
            android:layout_marginTop="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_theme"/>

    <TextView
            android:id="@+id/textView_estimatedTime"
            style="@style/SmallTextView"
            android:paddingStart="40dp"
            android:layout_marginTop="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_length"
            android:text="@string/estimated_time"/>

    <Spinner
            android:id="@+id/spinner_route_length"
            android:layout_width="140dp"
            android:layout_height="30dp"
            android:entries="@array/lengths_of_route"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.375"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="88dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner_route_theme" />

    <Spinner
        android:id="@+id/spinner_route_estimated_time"
        android:layout_width="140dp"
        android:layout_height="31dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="42dp"
        android:entries="@array/estimated_times_of_route"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.628"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_route_length" />

    <TextView
            android:id="@+id/textview_minNumOfPOI"
            style="@style/SmallTextView"
            android:paddingStart="40dp"
            android:layout_marginTop="50dp"
            android:text="@string/number_of_POI"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_estimatedTime"/>

    <EditText
            android:id="@+id/editText_minimumNumberOfPOI"
            android:layout_width="126dp"
            android:layout_height="40dp"
            android:ems="10"
            android:focusableInTouchMode="true"
            android:inputType="number"
            android:nextFocusDown="@id/spinner_route_theme"
            android:text="@string/zero"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="250dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_estimatedTime"
        />

    <TextView
            android:id="@+id/textView_pointsEarnedCompletingRoute"
            style="@style/SmallTextView"
            android:paddingStart="40dp"
            android:layout_marginTop="50dp"
            android:text="@string/reward_points"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_minNumOfPOI"/>

    <EditText
            android:id="@+id/editText_minimumOfPoints"
            android:layout_width="137dp"
            android:layout_height="42dp"
            android:ems="10"
            android:inputType="number"
            android:text="@string/zero"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.391"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="135dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_minimumNumberOfPOI"/>

    <TextView
            android:id="@+id/textview_kmOfRoute"
            android:layout_width="34dp"
            android:layout_height="24dp"
            android:layout_marginEnd="28dp"
            android:layout_marginRight="28dp"
            android:text="@string/km"
            app:layout_constraintBottom_toBottomOf="@+id/spinner_route_length"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/spinner_route_length"
            app:layout_constraintTop_toTopOf="@+id/spinner_route_length"/>

    <TextView
            android:id="@+id/textView_timeOfRoute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hours"
            app:layout_constraintBottom_toBottomOf="@+id/spinner_route_estimated_time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.193"
            app:layout_constraintStart_toEndOf="@+id/spinner_route_estimated_time"
            app:layout_constraintTop_toTopOf="@+id/spinner_route_estimated_time"
            app:layout_constraintVertical_bias="1.0"/>

    <TextView
        android:id="@+id/textView_orderedRoute"
        style="@style/SmallTextView"
        android:paddingStart="40dp"
        android:layout_marginTop="50dp"
        android:text="@string/ordered_route"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_pointsEarnedCompletingRoute" />

    <Spinner
        android:id="@+id/spinner_orderedRoute"
        android:layout_width="107dp"
        android:layout_height="23dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="36dp"
        android:entries="@array/ordered_route_choices"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_minimumOfPoints" />

</androidx.constraintlayout.widget.ConstraintLayout>